--- a/app/src/main/res/layout/activity_classes.xml
+++ b/app/src/main/res/layout/activity_classes.xml
@@ -10,4 +10,12 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.purdue.cs.sigapp.studytables.classes.activity.ClassesActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_purdue_classes"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v7.widget.RecyclerView>
+
 </RelativeLayout>
