--- a/app/src/main/res/layout/activity_classes.xml
+++ b/app/src/main/res/layout/activity_classes.xml
@@ -4,17 +4,14 @@
     android:id="@+id/activity_classes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.purdue.cs.sigapp.studytables.classes.activity.ClassesActivity">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_purdue_classes"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/material_black">
 
     </android.support.v7.widget.RecyclerView>
 
