--- a/app/src/main/res/layout/activity_classes.xml
+++ b/app/src/main/res/layout/activity_classes.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_classes"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,5 +15,16 @@
         android:background="@color/material_black">
 
     </android.support.v7.widget.RecyclerView>
+
+    <!--This is mostly for debug to give a way to click
+    through the class list without needing to impl everything.-->
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_classlist_details"
+        app:fabSize="normal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </RelativeLayout>
