Created new activity with parsels

--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:layout_width="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/activity_new_event"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -19,6 +19,7 @@
         android:weightSum="1">
 
         <TextView
+            android:id="@+id/titleTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Title"
@@ -27,39 +28,49 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/activity_new_event_title"/>
+            android:id="@+id/activity_new_event_title"
+            android:layout_below="@+id/titleTextView"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Location"
-            />
+            android:id="@+id/LocationtextView"
+            android:layout_below="@+id/activity_new_event_title"/>
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@id/activity_new_event_title"
-            />
+            android:id="@+id/locationEditText"
+            android:layout_below="@+id/LocationtextView"/>
+        <!--<EditText-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:id="@id/activity_new_event_title"-->
+            <!--/>-->
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Course"
+            android:id="@+id/coursetextview"
+            android:layout_below="@id/locationEditText"
             />
 
         <Spinner
             android:layout_width="280dp"
-            android:layout_height="27dp"
-            android:id="@+id/spinner"
+            android:layout_height="wrap_content"
+            android:id="@+id/classListSpinner"
             android:background="@android:drawable/btn_dropdown"
-            android:spinnerMode="dropdown"></Spinner>
+            android:spinnerMode="dropdown"
+            android:layout_below="@+id/coursetextview"></Spinner>
 
         <TextView
             android:id="@+id/dateTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date"
-            />
+            android:layout_below="@id/classListSpinner"/>
 
         <DatePicker
             android:id="@+id/Datepicker"
@@ -68,19 +79,74 @@
             android:layout_height="wrap_content"
             android:datePickerMode="spinner"
             android:spinnersShown="false"
-            android:layout_weight="0.20"></DatePicker>
+            android:layout_below="@+id/dateTextView"></DatePicker>
 
         <TextView
             android:id="@+id/timeTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Time"
-            />
+            android:text="8:00 PM"
+            android:layout_below="@+id/Datepicker"/>
 
-        <TimePicker
-            android:id="@+id/timePicker1"
+        <TextView
+            android:id="@+id/lengthOfMeeting"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Length of Meeting"
+            android:layout_below="@+id/timeTextView"/>
 
-    </LinearLayout>
+        <Spinner
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/timeListSpinner"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:layout_below="@+id/lengthOfMeeting"></Spinner>
+
+        <TextView
+            android:id="@+id/repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Repeat"
+            android:layout_below="@+id/timeListSpinner"/>
+
+        <Spinner
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/repeatListSpinner"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:layout_below="@+id/repeat"></Spinner>
+
+        <TextView
+            android:id="@+id/reminder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reminder"
+            android:layout_below="@+id/repeatListSpinner"/>
+
+        <Spinner
+            android:layout_width="280dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/reminderSpinner"
+            android:background="@android:drawable/btn_dropdown"
+            android:spinnerMode="dropdown"
+            android:layout_below="@id/reminder"></Spinner>
+
+        <Button
+            android:id="@+id/createButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Create"
+            android:layout_below="@+id/reminderSpinner"/>
+
+        <Button
+            android:id="@+id/cancelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cancel"
+            android:layout_below="@+id/reminderSpinner"
+            android:layout_toEndOf="@+id/createButton"
+            android:layout_toRightOf="@+id/createButton" />
+    </RelativeLayout>
 </ScrollView>
