Adding a bunch of activities to begin to match the UI pattern developed by the team. This should give context to work already being done.

--- a/app/src/main/res/layout/activity_class_events.xml
+++ b/app/src/main/res/layout/activity_class_events.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_event_details"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="edu.purdue.cs.sigapp.studytables.scheduling.model.EventDetailsActivity">
+    tools:context="edu.purdue.cs.sigapp.studytables.ClassEventsActivity">
 
     <android.support.design.widget.AppBarLayout
-        android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -22,17 +20,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TextView
-        android:layout_below="@id/appBarLayout"
-        android:id="@+id/txt_demo_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is where the event details are displayed for a given event." />
+    <include layout="@layout/content_class_events" />
 
-    <Button
-        android:id="@+id/btn_edit_event"
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txt_demo_content"
-        android:text="Edit Event" />
-</RelativeLayout>
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        app:srcCompat="@android:drawable/ic_dialog_email" />
+
+</android.support.design.widget.CoordinatorLayout>
